# Sequoia

./: .gitignore  Cargo.toml  README.md
src/: client.rs  db.rs  email.rs  lib.rs  mailer.rs  main.rs  scheduler.rs
src/client/: client_ref.rs  group.rs
src/email/: builder.rs  plain_email.rs  tags.rs  template_email.rs
src/scheduler/: trigger.rs
src/scheduler/trigger/: counter.rs  datetime.rs
src/scheduler/trigger/datetime/: day.rs  month.rs  partial_date.rs  serde_time.rs  serde_year.rs
